--- a/package.json
+++ b/package.json
@@ -16,30 +16,5 @@
   "bugs": {
     "url": "https://github.com/ermander/Betting-Arbitrage-System-BE/issues"
   },
-  "homepage": "https://github.com/ermander/Betting-Arbitrage-System-BE#readme",
-  "devDependencies": {
-    "@types/compression": "^1.7.2",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.15",
-    "@types/morgan": "^1.9.4",
-    "@types/node": "^18.11.18",
-    "@typescript-eslint/eslint-plugin": "^5.48.2",
-    "@typescript-eslint/parser": "^5.48.2",
-    "eslint": "^8.32.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.3",
-    "tsc-watch": "^6.0.0",
-    "typescript": "^4.9.4"
-  },
-  "dependencies": {
-    "compression": "^1.7.4",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "helmet": "^6.0.1",
-    "module-alias": "^2.2.2",
-    "mongoose": "^6.8.4",
-    "morgan": "^1.10.0"
-  }
+  "homepage": "https://github.com/ermander/Betting-Arbitrage-System-BE#readme"
 }
