--- a/package.json
+++ b/package.json
@@ -1,37 +1,49 @@
 {
-  "name": "betting-arbitrage-system-be",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/compression": "^1.7.4",
-    "@types/cors": "^2.8.15",
-    "@types/express": "^4.17.20",
-    "@types/morgan": "^1.9.7",
-    "@types/node": "^20.8.10",
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "@typescript-eslint/parser": "^6.9.1",
-    "eslint": "^8.53.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "prettier": "^3.0.3",
-    "tsc-watch": "^6.0.4",
-    "typescript": "^5.2.2"
-  },
-  "dependencies": {
-    "compression": "^1.7.4",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "helmet": "^7.0.0",
-    "module-alias": "^2.2.3",
-    "mongoose": "^8.0.0",
-    "morgan": "^1.10.0"
-  }
+    "name": "betting-arbitrage-system-be",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node dist/index.js",
+        "dev": "tsc-watch --onSuccess \"node dist/index.js\"",
+        "build": "tsc",
+        "postinstall": "npm run build"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@types/compression": "^1.7.4",
+        "@types/cors": "^2.8.15",
+        "@types/express": "^4.17.20",
+        "@types/module-alias": "^2.0.3",
+        "@types/morgan": "^1.9.7",
+        "@types/node": "^20.8.10",
+        "@typescript-eslint/eslint-plugin": "^6.9.1",
+        "@typescript-eslint/parser": "^6.9.1",
+        "eslint": "^8.53.0",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-prettier": "^5.0.1",
+        "prettier": "^3.0.3",
+        "tsc-watch": "^6.0.4",
+        "typescript": "^5.2.2"
+    },
+    "dependencies": {
+        "compression": "^1.7.4",
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "envalid": "^8.0.0",
+        "express": "^4.18.2",
+        "helmet": "^7.0.0",
+        "joi": "^17.11.0",
+        "module-alias": "^2.2.3",
+        "mongoose": "^8.0.0",
+        "morgan": "^1.10.0"
+    },
+    "_moduleAliases": {
+        "@/resources": "dist/resources",
+        "@/utils": "dist/utils",
+        "@/middlewares": "dist/middlewares"
+    }
 }
