Added models folder

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "_moduleAliases": {
         "@/resources": "dist/resources",
         "@/utils": "dist/utils",
-        "@/middlewares": "dist/middlewares"
+        "@/middlewares": "dist/middlewares",
+        "@/models": "dist/models"
     }
 }
