--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@types/bcrypt": "^5.0.1",
         "@types/compression": "^1.7.4",
         "@types/cors": "^2.8.15",
         "@types/express": "^4.17.20",
+        "@types/jsonwebtoken": "^9.0.4",
         "@types/module-alias": "^2.0.3",
         "@types/morgan": "^1.9.7",
         "@types/node": "^20.8.10",
@@ -30,6 +32,7 @@
         "typescript": "^5.2.2"
     },
     "dependencies": {
+        "bcrypt": "^5.1.1",
         "compression": "^1.7.4",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
@@ -37,6 +40,7 @@
         "express": "^4.18.2",
         "helmet": "^7.0.0",
         "joi": "^17.11.0",
+        "jsonwebtoken": "^9.0.2",
         "module-alias": "^2.2.3",
         "mongoose": "^8.0.0",
         "morgan": "^1.10.0"
