--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@types/module-alias": "^2.0.3",
         "@types/morgan": "^1.9.7",
         "@types/node": "^20.8.10",
+        "@types/node-telegram-bot-api": "^0.63.1",
         "@typescript-eslint/eslint-plugin": "^6.9.1",
         "@typescript-eslint/parser": "^6.9.1",
         "eslint": "^8.53.0",
@@ -32,6 +33,8 @@
         "typescript": "^5.2.2"
     },
     "dependencies": {
+        "@types/node-schedule": "^2.1.2",
+        "axios": "^1.6.0",
         "bcrypt": "^5.1.1",
         "compression": "^1.7.4",
         "cors": "^2.8.5",
@@ -42,8 +45,11 @@
         "joi": "^17.11.0",
         "jsonwebtoken": "^9.0.2",
         "module-alias": "^2.2.3",
+        "moment": "^2.29.4",
         "mongoose": "^8.0.0",
-        "morgan": "^1.10.0"
+        "morgan": "^1.10.0",
+        "node-schedule": "^2.1.1",
+        "node-telegram-bot-api": "^0.64.0"
     },
     "_moduleAliases": {
         "@/resources": "dist/resources",
