--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,8 @@
             "@/middlewares/*": ["middlewares/*"],
             "@/models/*": ["models/*"],
             "@/crons/*": ["crons/*"],
-            "@/controllers/*": ["controllers/*"]
+            "@/controllers/*": ["controllers/*"],
+            "@/assets/*": ["assets/*"]
         } /* Specify a set of entries that re-map imports to additional lookup locations. */,
         // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
         // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
