--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dependencies": {
         "@types/node-schedule": "^2.1.2",
         "axios": "^1.6.0",
+        "axios-rate-limit": "^1.3.0",
         "bcrypt": "^5.1.1",
         "compression": "^1.7.4",
         "cors": "^2.8.5",
@@ -49,7 +50,8 @@
         "mongoose": "^8.0.0",
         "morgan": "^1.10.0",
         "node-schedule": "^2.1.1",
-        "node-telegram-bot-api": "^0.64.0"
+        "node-telegram-bot-api": "^0.64.0",
+        "scrapingbee": "^1.7.4"
     },
     "_moduleAliases": {
         "@/resources": "dist/resources",
