Implementazione chiamate robin odds e messaggi telegram

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
         "@/models": "dist/models",
         "@/crons": "dist/crons",
         "@/controllers": "dist/controllers",
-        "@/assets": "dist/assets"
+        "@/assets": "dist/assets",
+        "@/constants": "dist/constants"
     }
 }
