--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,8 @@
             "@/models/*": ["models/*"],
             "@/crons/*": ["crons/*"],
             "@/controllers/*": ["controllers/*"],
-            "@/assets/*": ["assets/*"]
+            "@/assets/*": ["assets/*"],
+            "@/constants/*": ["constants/*"]
         } /* Specify a set of entries that re-map imports to additional lookup locations. */,
         // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
         // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
