--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@types/morgan": "^1.9.7",
         "@types/node": "^20.8.10",
         "@types/node-telegram-bot-api": "^0.63.1",
+        "@types/selenium-webdriver": "^4.1.21",
         "@typescript-eslint/eslint-plugin": "^6.9.1",
         "@typescript-eslint/parser": "^6.9.1",
         "eslint": "^8.53.0",
@@ -33,10 +34,12 @@
         "typescript": "^5.2.2"
     },
     "dependencies": {
+        "@types/cheerio": "^0.22.35",
         "@types/node-schedule": "^2.1.2",
         "axios": "^1.6.0",
         "axios-rate-limit": "^1.3.0",
         "bcrypt": "^5.1.1",
+        "cheerio": "^1.0.0-rc.12",
         "compression": "^1.7.4",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
@@ -51,7 +54,9 @@
         "morgan": "^1.10.0",
         "node-schedule": "^2.1.1",
         "node-telegram-bot-api": "^0.64.0",
-        "scrapingbee": "^1.7.4"
+        "puppeteer": "^22.0.0",
+        "scrapingbee": "^1.7.4",
+        "selenium-webdriver": "^4.17.0"
     },
     "_moduleAliases": {
         "@/resources": "dist/resources",
